# pytorch-template

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-dockerhub.yml  test.yml
config/: __init__.py  arguments.py  settings.py
src/: main.py
tests/: test_main.py  test_wandb.py
tests/config/: test_arguments.py  test_settings.py
