[project]
name = "pytorch-template"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch==2.3.0+cu121",
    "torchaudio==2.3.0+cu121",
    "torchvision==0.18.0+cu121",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "nvitop>=1.3.2",
    "pre-commit>=3.7.0",
    "ruff>=0.3.5",
    "pytest-asyncio>=0.23.5",
    "jupyter>=1.0.0",
]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytorch_template"]
